# bvb-info

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  bvb_full_data.py  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json.tmp.326551.85eee2fca852  settings.local.json.tmp.326551.a1590a871b5c  settings.local.json.tmp.326551.dbfdaaf63fc3  settings.local.json.tmp.326551.fc1404bb4083  settings.local.json.tmp.8359.8c4628dc69db  settings.local.json.tmp.8359.ba6498a6d6eb
.github/workflows/: scrape.yml
alembic/: env.py
alembic/versions/: 134594173e32_initial_schema.py
api/: index.py  requirements.txt
bvb_scraper/: __init__.py  config.py  export.py  logging_config.py  main.py  models.py  retry.py  session.py
bvb_scraper/api/: __init__.py  app.py  db.py  schemas.py  v1.py  web.py
bvb_scraper/api/static/: style.css
bvb_scraper/api/templates/: base.html  company.html  index.html
bvb_scraper/crawler/: companies.py  discover.py  filings.py  indices.py  prices.py
bvb_scraper/db/: base.py  repository.py  schema.py
bvb_scraper/etl/: normalize.py  pipeline.py
bvb_scraper/parsers/: html.py  numbers.py  pdf.py  xlsx.py
docs/superpowers/plans/: 2026-07-08-bvb-etl-pipeline.md
docs/superpowers/specs/: 2026-07-08-bvb-etl-pipeline-design.md
tests/: test_api.py  test_html_parser.py  test_normalize.py  test_numbers.py
tests/fixtures/: detail_sample.html
