[project]
name = "bvb-scraper"
version = "1.0.0"
description = "Production ETL pipeline for Bucharest Stock Exchange (BVB) data"
requires-python = ">=3.11"
# Serverless API dependency set (what Vercel installs). The full scraper
# toolchain (requests, pandas, pdfplumber, ...) installs via requirements.txt.
dependencies = [
    "fastapi>=0.111",
    "jinja2>=3.1",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
